fix(dialog): fix dialog alignment in IE11
Closes #790

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -25,7 +25,6 @@ md-dialog {
   min-width: 240px;
   max-width: 80%;
   max-height: 80%;
-  margin: auto;
   position: relative;
   overflow: hidden; // stop content from leaking out of dialog parent
 
